# Sloths

./: Graphic Result Report.MD  README.md  README.txt  Sloths2-2.ipynb  app_gradio.py  gitignore.txt  pyproject.toml  requirements.txt  visualizations.py
.ipynb_checkpoints/: MetricsCallback-checkpoint.py  README-checkpoint.md  app_gradio (copia 1)-checkpoint.py  app_gradio-checkpoint.py  pyproject-checkpoint.toml
Sloths_Pain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ImageClassifier.html  MetricsCallback.html  Sloths.html  docs_index.html  imshow.html  index.html  search.js  sloths.html  visualizations.html
docs/Sloths/: ImageClassifier.html  MetricsCallback.html  docs_index.html  imshow.html  visualizations.html
docs/sloths/: ImageClassifier.html  MetricsCallback.html  app_gradio.html  imshow.html  module.html  visualizations.html
lightning_logs/version_0/: events.out.tfevents.1760723862.eim-alu-83085.82284.0
lightning_logs/version_1/: events.out.tfevents.1760724371.eim-alu-83085.84023.0
lightning_logs/version_10/: events.out.tfevents.1760777643.eim-alu-83085.245308.0
lightning_logs/version_11/: events.out.tfevents.1760778169.eim-alu-83085.246990.0
lightning_logs/version_12/: events.out.tfevents.1760778953.eim-alu-83085.250011.0
lightning_logs/version_13/: events.out.tfevents.1760779662.eim-alu-83085.252196.0
lightning_logs/version_14/: events.out.tfevents.1760779683.eim-alu-83085.252196.1
lightning_logs/version_15/: events.out.tfevents.1760782452.eim-alu-83085.260532.0
lightning_logs/version_16/: events.out.tfevents.1760783323.eim-alu-83085.263566.0
lightning_logs/version_17/: events.out.tfevents.1760783579.eim-alu-83085.263566.1
lightning_logs/version_18/: events.out.tfevents.1760783813.eim-alu-83085.265077.0
lightning_logs/version_19/: events.out.tfevents.1760948210.eim-alu-83085.751516.0
lightning_logs/version_23/: metrics.csv
reports/: GraphicResultReport.MD  class_distribution.csv  image_dimensions_summary.csv  train_validation_distribution.csv
src/sloths/: ImageClassifier.py  (+1 more)
tests/: test_module.py
(+22 files in other folders)
